--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,107 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* .banner {
+  height: 200px;
+  width: 90vw;
+  background-color: aquamarine;
+  border: 1px solid #646cffaa;
+} */
+
+/*==========================================================*/
+/* Site specific CSS 
+/*==========================================================*/
+/* body {
+  background-color: #222;
+} */
+
+.canvas {
+  /* height: 100vh; */
+  margin: 1.5rem;
+  min-width: 750px;
+  background-color: beige;
+  border-radius: 2.5rem;
+}
+
+.header {
+  color: #1a1a1a;
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+}
+
+.menu .menu_item {
+  list-style: none;
+  text-align: left;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: [menu] 200px [body] auto;
+
+  color: #1a1a1a;
+}
+
+.characters {
+  display: flex;
+  flex-wrap: wrap;
+  border: 0rem solid black;
+}
+
+.characters .card {
+  min-width: 250px;
+  border-radius: 1rem;
+  border: 0.1rem solid red;
+  margin-bottom: 1rem;
+}
+
+.characters p {
+  margin: 0;
+  padding: 0;
+}
+
+.stash_tab {
+  display: grid;
+  border-top: 1px solid (var(--grey-500));
+  border-left: 1px solid (var(--grey-500));
+}
+
+.stash_tab > div {
+  border-right: 1px solid (var(--grey-500));
+  border-bottom: 1px solid (var(--grey-500));
+}
+
+.grid {
+  /* margin: auto; */
+  width: 400px;
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(16, 1fr);
+  gap: 0px; /* Add gap between cells */
+}
+
+.grid-cell {
+  width: 25px; /* Cell width */
+  height: 25px; /* Cell height */
+  background-color: #064e3b; /* Cell background color */
+  border: 1px solid #ccc; /* Cell border */
+}
+
+.poe-auth {
+  width: 350px;
+  height: 300px;
+  border: 0.025rem solid slategray;
+  border-radius: 0.5rem;
+  background-color: #1a1a1a;
+  color: #ccc;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.poe-auth h1 {
+  margin-bottom: 0.5rem;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.poe-auth .debug_client_id {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  gap: 2rem;
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  border: 1px solid red;
 }
