--- a/src/index.css
+++ b/src/index.css
@@ -68,8 +68,8 @@ html {
 
 body {
   background: var(--backgroundColor);
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
-    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 400;
   line-height: 1;
   color: var(--textColor);
@@ -267,68 +267,4 @@ ul {
   height: 0.25rem;
   margin: 0 auto;
   margin-top: 1rem;
-}
-
-/*==========================================================*/
-/* Site specific CSS 
-/*==========================================================*/
-body {
-
-  background-color: #222;
-
-}
-
-.canvas {
-  /* height: 100vh; */
-  margin: 1.5rem;
-  min-width: 750px;
-  background-color: beige;
-  border-radius: 2.5rem;
-}
-
-.header {
-  color: #1a1a1a;
-  padding-top: 1.5rem;
-  padding-bottom: 1rem;
-}
-
-.menu .menu_item {
-  list-style: none;
-  text-align: left;
-}
-
-.container {
-  display: grid;
-  grid-template-columns: [menu] 200px [body] auto;
-
-  color: #1a1a1a;
-}
-
-.characters {
-  display: flex;
-  flex-wrap: wrap;
-  border: 0rem solid black;
-}
-
-.characters .card {
-  min-width: 250px;
-  border-radius: 1.0rem;
-  border: 0.1rem solid red;
-  margin-bottom: 1rem;
-}
-
-.characters p {
-  margin: 0;
-  padding: 0;
-}
-
-.stash_tab {
-  display: grid;
-  border-top: 1px solid (var(--grey-500));
-  border-left: 1px solid (var(--grey-500));
-}
-
-.stash_tab>div {
-  border-right: 1px solid (var(--grey-500));
-  border-bottom: 1px solid (var(--grey-500));
 }
