--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,274 @@
-/* .banner {
-  height: 200px;
+/* ============= GLOBAL CSS =============== */
+
+*,
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 100%;
+}
+
+/*16px*/
+
+:root {
+  /* colors */
+  --primary-100: #e2e0ff;
+  --primary-200: #c1beff;
+  --primary-300: #a29dff;
+  --primary-400: #837dff;
+  --primary-500: #645cff;
+  --primary-600: #504acc;
+  --primary-700: #3c3799;
+  --primary-800: #282566;
+  --primary-900: #141233;
+
+  /* grey */
+  --grey-50: #f8fafc;
+  --grey-100: #f1f5f9;
+  --grey-200: #e2e8f0;
+  --grey-300: #cbd5e1;
+  --grey-400: #94a3b8;
+  --grey-500: #64748b;
+  --grey-600: #475569;
+  --grey-700: #334155;
+  --grey-800: #1e293b;
+  --grey-900: #0f172a;
+  /* rest of the colors */
+  --black: #222;
+  --white: #fff;
+  --red-light: #f8d7da;
+  --red-dark: #842029;
+  --green-light: #d1e7dd;
+  --green-dark: #0f5132;
+
+  --small-text: 0.875rem;
+  --extra-small-text: 0.7em;
+  /* rest of the vars */
+  --backgroundColor: var(--grey-50);
+  --textColor: var(--grey-900);
+  --borderRadius: 0.25rem;
+  --letterSpacing: 1px;
+  --transition: 0.3s ease-in-out all;
+  --max-width: 1120px;
+  --fixed-width: 600px;
+
+  /* box shadow*/
+  --shadow-1: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadow-2: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-3: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -2px rgba(0, 0, 0, 0.05);
+  --shadow-4: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
+body {
+  background: var(--backgroundColor);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 400;
+  line-height: 1;
+  color: var(--textColor);
+}
+
+p {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 0;
+  font-family: var(--headingFont);
+  font-weight: 400;
+  line-height: 1;
+  text-transform: capitalize;
+  letter-spacing: var(--letterSpacing);
+}
+
+h1 {
+  font-size: 3.052rem;
+}
+
+h2 {
+  font-size: 2.441rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+}
+
+.text {
+  margin-bottom: 1.5rem;
+  max-width: 40em;
+}
+
+small,
+.text-small {
+  font-size: var(--small-text);
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.img {
+  width: 100%;
+  display: block;
+  object-fit: cover;
+}
+
+/* buttons */
+
+.btn {
+  cursor: pointer;
+  color: var(--white);
+  background: var(--primary-500);
+  border: transparent;
+  border-radius: var(--borderRadius);
+  letter-spacing: var(--letterSpacing);
+  padding: 0.375rem 0.75rem;
+  box-shadow: var(--shadow-1);
+  transition: var(--transition);
+  text-transform: capitalize;
+  display: inline-block;
+}
+
+.btn:hover {
+  background: var(--primary-700);
+  box-shadow: var(--shadow-3);
+}
+
+.btn-hipster {
+  color: var(--primary-500);
+  background: var(--primary-200);
+}
+
+.btn-hipster:hover {
+  color: var(--primary-200);
+  background: var(--primary-700);
+}
+
+.btn-block {
+  width: 100%;
+}
+
+/* alerts */
+.alert {
+  padding: 0.375rem 0.75rem;
+  margin-bottom: 1rem;
+  border-color: transparent;
+  border-radius: var(--borderRadius);
+}
+
+.alert-danger {
+  color: var(--red-dark);
+  background: var(--red-light);
+}
+
+.alert-success {
+  color: var(--green-dark);
+  background: var(--green-light);
+}
+
+/* form */
+
+.form {
   width: 90vw;
-  background-color: aquamarine;
-  border: 1px solid #646cffaa;
-} */
+  max-width: var(--fixed-width);
+  background: var(--white);
+  border-radius: var(--borderRadius);
+  box-shadow: var(--shadow-2);
+  padding: 2rem 2.5rem;
+  margin: 3rem auto;
+}
+
+.form-label {
+  display: block;
+  font-size: var(--small-text);
+  margin-bottom: 0.5rem;
+  text-transform: capitalize;
+  letter-spacing: var(--letterSpacing);
+}
+
+.form-input,
+.form-textarea {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  border-radius: var(--borderRadius);
+  background: var(--backgroundColor);
+  border: 1px solid var(--grey-200);
+}
+
+.form-row {
+  margin-bottom: 1rem;
+}
+
+.form-textarea {
+  height: 7rem;
+}
+
+::placeholder {
+  font-family: inherit;
+  color: var(--grey-400);
+}
+
+.form-alert {
+  color: var(--red-dark);
+  letter-spacing: var(--letterSpacing);
+  text-transform: capitalize;
+}
+
+/* alert */
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.loading {
+  width: 6rem;
+  height: 6rem;
+  border: 5px solid var(--grey-400);
+  border-radius: 50%;
+  border-top-color: var(--primary-500);
+  animation: spinner 0.6s linear infinite;
+  margin: 0 auto;
+}
+
+/* title */
+
+.title {
+  text-align: center;
+}
+
+.title-underline {
+  background: var(--primary-500);
+  width: 7rem;
+  height: 0.25rem;
+  margin: 0 auto;
+  margin-top: 1rem;
+}
 
 /*==========================================================*/
 /* Site specific CSS 
@@ -15,20 +280,57 @@
 .canvas {
   /* height: 100vh; */
   margin: 1.5rem;
-  min-width: 750px;
+  min-width: 600px;
   background-color: beige;
   border-radius: 2.5rem;
+  border: 0.025rem solid #064e3b;
+  padding: 2rem;
+}
+
+.canvas h1 {
+  text-align: center;
+  color: var(--primary-900);
+}
+
+.banner {
+  text-align: center;
+  border-bottom: 1px solid var(--primary-600);
+  margin-bottom: 5px;
 }
 
 .header {
-  color: #1a1a1a;
+  color: var(--primary-700);
   padding-top: 1.5rem;
   padding-bottom: 1rem;
 }
 
+.menu {
+  /* background-color: lightgray; */
+  margin: 0.025rem;
+  border-radius: 5px;
+  /* border: 1px solid black; */
+}
+
 .menu .menu_item {
+  background-color: lightgrey;
   list-style: none;
-  text-align: left;
+  text-align: center;
+  margin: 1.5rem 0.5rem;
+  padding: 0.5rem 0.25rem;
+  border: 0.025rem solid black;
+  border-radius: 5px;
+  box-shadow: 1px 1px 5px var(--primary-400);
+}
+
+.menu_item .linkButton {
+  color: var(--primary-600);
+  /* color: red; */
+}
+
+.menu .menu_item:hover {
+  background-color: darkgray;
+  text-decoration: underline;
+  box-shadow: 2px 2px 5px var(--primary-600);
 }
 
 .container {
@@ -38,6 +340,11 @@
   color: #1a1a1a;
 }
 
+.content {
+  margin-left: 2rem;
+  ;
+}
+
 .character {
   display: flex;
   flex-wrap: wrap;
@@ -45,10 +352,27 @@
 }
 
 .character .card {
+  width: 500px;
+  height: 250px;
+  padding: 10px;
+
   min-width: 250px;
   border-radius: 1rem;
-  border: 0.1rem solid red;
+  /* border: 0.1rem solid red; */
   margin-bottom: 1rem;
+}
+
+.card h5 {
+  color: var(--primary-600);
+  text-shadow: 2px 2px 10px var(--primary-900);
+  padding-top: 2px;
+}
+
+.card p {
+  color: var(--primary-500);
+  text-shadow: 2px 2px 5px var(--primary-300);
+  margin: 15px;
+  ;
 }
 
 .characters p {
@@ -62,7 +386,7 @@
   border-left: 1px solid (var(--grey-500));
 }
 
-.stash_tab > div {
+.stash_tab>div {
   border-right: 1px solid (var(--grey-500));
   border-bottom: 1px solid (var(--grey-500));
 }
@@ -73,14 +397,19 @@
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: repeat(16, 1fr);
-  gap: 0px; /* Add gap between cells */
+  gap: 0px;
+  /* Add gap between cells */
 }
 
 .grid-cell {
-  width: 25px; /* Cell width */
-  height: 25px; /* Cell height */
-  background-color: #064e3b; /* Cell background color */
-  border: 1px solid #ccc; /* Cell border */
+  width: 25px;
+  /* Cell width */
+  height: 25px;
+  /* Cell height */
+  background-color: #064e3b;
+  /* Cell background color */
+  border: 1px solid #ccc;
+  /* Cell border */
 }
 
 .poe-auth {
@@ -104,4 +433,56 @@
   gap: 2rem;
 
   border: 1px solid red;
+}
+
+.label {
+  font-weight: 500;
+  color: darkgreen;
+  width: 120px;
+}
+
+.results {
+  display: flex;
+  align-content: stretch;
+}
+
+.spacer {
+  height: 5px;
+
+}
+
+.prev-btn,
+.next-btn {
+  color: var(--primary-700);
+  font-size: 1.25rem;
+  background: transparent;
+  border-color: transparent;
+  margin: 0 0.5rem;
+  transition: var(--transition);
+  cursor: pointer;
+}
+
+.prev-btn:hover,
+.next-btn:hover {
+  color: var(--primary-500);
+}
+
+.btn-container {
+  margin-bottom: 1rem;
+}
+
+.character-card {
+  margin: auto;
+  width: 90vw;
+  max-width: var(--fixed-width);
+  background: var(--white);
+  padding: 1.5rem 2rem;
+  border-radius: var(--borderRadius);
+  box-shadow: var(--shadow-1);
+  transition: var(--transition);
+  text-align: center;
+}
+
+.character-card:hover {
+  box-shadow: var(--shadow-4);
 }
